fix broken social icon placement on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -633,18 +633,18 @@ body {
   width: 20rem;
   height: 20rem;
   background-color: #2e3233; }
+  .social a {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: auto; }
   .social__icon {
-    padding: 2rem 0 2rem 0;
-    width: 100%;
-    height: auto; }
+    height: 67%;
+    width: auto; }
     .social__icon:hover {
       fill: red; }
-    .social__icon--discord {
-      transform: scale(0.5); }
-    .social__icon--email {
-      transform: scale(1.8); }
-    .social__icon--github {
-      transform: scale(0.5); }
   .social__title {
     padding-top: 1rem;
     color: #94b4c1;
@@ -657,13 +657,7 @@ body {
       width: 100%; } }
   @media (max-width: 37.5em) {
     .social {
-      width: 100%; }
-      .social__icon--discord {
-        transform: scale(0.4); }
-      .social__icon--email {
-        transform: scale(1.3); }
-      .social__icon--github {
-        transform: scale(0.3); } }
+      width: 100%; } }
 
 a svg:hover #github,
 a svg:hover .st0 {
