--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -7,25 +7,21 @@
 	height: 20rem;
 	background-color: $aleph-grey;
 
+	& a {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		align-items: center;
+		height: 100%;
+		width: auto;
+	}
+
 	&__icon {
-		padding: 2rem 0 2rem 0;
-		width: 100%;
-		height: auto;
+		height: 67%;
+		width: auto;
 
 		&:hover {
 			fill: red;
-		}
-
-		&--discord {
-			transform: scale(.5);
-		}
-
-		&--email {
-			transform: scale(1.8);
-		}
-
-		&--github {
-			transform: scale(.5);
 		}
 	}
 
@@ -46,22 +42,6 @@
 
 	@include responsive($phone){
 		width: 100%;
-		
-		&__icon {
-			// transform: scale(.8);
-
-			&--discord {
-				transform: scale(.4);
-			}
-
-			&--email {
-				transform: scale(1.3);
-			}
-
-			&--github {
-				transform: scale(.3);
-			}
-		}
 	}
 }
 
